Fix audio on ie11

--- a/packages/@coorpacademy-components/src/template/app-player/player/slides/style.css
+++ b/packages/@coorpacademy-components/src/template/app-player/player/slides/style.css
@@ -40,6 +40,7 @@
   width: 100%;
   box-sizing: border-box;
   border-radius: 0px 0px 3px 3px;
+  z-index: 0;
 }
 
 .contentWrapperNoPadding {
